--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -975,3 +975,271 @@
   institution={Washington State Univ., Pullman, WA (United States)}
 }
 
+@inproceedings{poudyal2022spatiotemporal,
+  title={Spatiotemporal impact assessment of hurricanes on electric power systems},
+  author={Poudyal, Abodh and Dubey, Anamika and Iyengar, Vishnu and Garcia-Camargo, Diego},
+  booktitle={2022 IEEE Power \& Energy Society General Meeting (PESGM)},
+  pages={1--5},
+  year={2022},
+  organization={IEEE}
+}
+
+@inproceedings{paul2021planning,
+  title={Planning for resilient power distribution systems using risk-based quantification and q-learning},
+  author={Paul, Shuva and Dubey, Anamika and Poudel, Shiva},
+  booktitle={2021 IEEE Power \& Energy Society General Meeting (PESGM)},
+  pages={1--5},
+  year={2021},
+  organization={IEEE}
+}
+
+@inproceedings{sadnan2021distributed,
+  title={Distributed optimization for power distribution systems with cyber-physical co-simulation},
+  author={Sadnan, Rabayet and Gray, Nathan and Dubey, Anamika and Bose, Anjan},
+  booktitle={2021 IEEE Power \& Energy Society General Meeting (PESGM)},
+  pages={1--5},
+  year={2021},
+  organization={IEEE}
+}
+
+@inproceedings{reddy2021primary,
+  title={Primary Voltage Forecasting in Distribution Systems using Principal Component Analysis},
+  author={Reddy, Motakatla Venkateswara and Dubey, Anamika},
+  booktitle={2021 IEEE Power \& Energy Society General Meeting (PESGM)},
+  pages={1--5},
+  year={2021},
+  organization={IEEE}
+}
+
+@inproceedings{al2021small,
+  title={Small-signal voltage stability analysis for droop controlled inverter-based microgrids: an algebraic graph theory perspective},
+  author={Al Maruf, Abdullah and Dubey, Anamika and Roy, Sandip},
+  booktitle={2021 IEEE Power \& Energy Society General Meeting (PESGM)},
+  pages={01--05},
+  year={2021},
+  organization={IEEE}
+}
+
+@inproceedings{bajagain2021harmonic,
+  title={Harmonic Distortion Analysis in North American Residential Power Distribution Systems},
+  author={Bajagain, Surendra and Dubey, Anamika},
+  booktitle={2021 IEEE Power \& Energy Society General Meeting (PESGM)},
+  pages={1--5},
+  year={2021},
+  organization={IEEE}
+}
+
+@inproceedings{gray2021effects,
+  title={Effects of Communication Network Topology on Distributed Optimal Power Flow for Radial Distribution Networks},
+  author={Gray, Nathan and Sadnan, Rabayet and Bose, Anjan and Dubey, Anamika},
+  booktitle={2021 North American Power Symposium (NAPS)},
+  pages={1--6},
+  year={2021},
+  organization={IEEE}
+}
+
+@inproceedings{nagpure2021bisection,
+  title={Bisection Search of Faulted Segment Based on Radially Energized Distribution Feeder},
+  author={Nagpure, Anurag and Dubey, Anamika and Ten, Chee-Wooi},
+  booktitle={2021 North American Power Symposium (NAPS)},
+  pages={1--6},
+  year={2021},
+  organization={IEEE}
+}
+
+@article{schneider2022framework,
+  title={A framework for coordinated self-assembly of networked microgrids using consensus algorithms},
+  author={Schneider, Kevin P and Glass, Jim and Klauber, Cecilia and Ollis, Ben and Reno, Matthew J and Burck, Michael and Muhidin, Lelic and Dubey, Anamika and Du, Wei and Vu, Long and others},
+  journal={IEEE Access},
+  volume={10},
+  pages={3864--3878},
+  year={2022},
+  publisher={IEEE}
+}
+
+@article{ostadijafari2022proactive,
+  title={Proactive demand-side participation: Centralized versus transactive demand-Supply coordination},
+  author={Ostadijafari, Mohammad and Bedoya, Juan Carlos and Wang, Wei and Dubey, Anamika and Liu, Chen-Ching and Yu, Nanpeng},
+  journal={Electric Power Systems Research},
+  volume={206},
+  pages={107789},
+  year={2022},
+  publisher={Elsevier}
+}
+
+@techreport{srivastava2021aggregate,
+  title={AGGREGATE: dAta-driven modelinG preservinG contRollable dEr for outaGe mAnagemenT and rEsiliency},
+  author={Srivastava, Anurag K and Liu, Chen-Ching and Dubey, Anamika and Pannala, S and Annaswamy, Anuradha M and Venkataramanan, V and Balasubramaniam, Karthikeyan and Siddiqi, U and Lalani, Asif and Venkata, SS},
+  year={2021},
+  institution={Washington State Univ., Pullman, WA (United States)}
+}
+
+@article{wang2022mpc,
+  title={MPC-based decentralized voltage control in power distribution systems with EV and PV coordination},
+  author={Wang, Lusha and Dubey, Anamika and Gebremedhin, Assefaw H and Srivastava, Anurag K and Schulz, Noel},
+  journal={IEEE Transactions on Smart Grid},
+  volume={13},
+  number={4},
+  pages={2908--2919},
+  year={2022},
+  publisher={IEEE}
+}
+
+@article{john2022improved,
+  title={Improved Observability in Distribution Grids Using Correlational Measurements},
+  author={John, Yohan and Venkataramanan, Venkatesh and Annaswamy, Anuradha M and Dubey, Anamika and Srivastava, Anurag K},
+  journal={IEEE Access},
+  volume={10},
+  pages={27320--27329},
+  year={2022},
+  publisher={IEEE}
+}
+
+@inproceedings{poudyal2022risk,
+  title={A risk-driven probabilistic approach to quantify resilience in power distribution systems},
+  author={Poudyal, Abodh and Dubey, Anamika and Poudel, Shiva},
+  booktitle={2022 17th International Conference on Probabilistic Methods Applied to Power Systems (PMAPS)},
+  pages={1--6},
+  year={2022},
+  organization={IEEE}
+}
+
+@article{aguiar2022pricing,
+  title={Pricing Demand-Side Flexibility With Noisy Consumers: Mean-Variance Trade-Offs},
+  author={Aguiar, Nayara and Dubey, Anamika and Gupta, Vijay},
+  journal={IEEE Transactions on Power Systems},
+  volume={38},
+  number={2},
+  pages={1151--1161},
+  year={2022},
+  publisher={IEEE}
+}
+
+@article{sadnan2022layered,
+  title={Layered coordination architecture for resilient restoration of power distribution systems},
+  author={Sadnan, Rabayet and Poudel, Shiva and Dubey, Anamika and Schneider, Kevin P},
+  journal={IEEE Transactions on Industrial Informatics},
+  volume={19},
+  number={4},
+  pages={6069--6080},
+  year={2022},
+  publisher={IEEE}
+}
+
+@inproceedings{sadnan2022distributed,
+  title={Distributed optimization in distribution systems with grid-forming and grid-supporting inverters},
+  author={Sadnan, Rabayet and Dubey, Anamika},
+  booktitle={2022 IEEE Power \& Energy Society General Meeting (PESGM)},
+  pages={01--05},
+  year={2022},
+  organization={IEEE}
+}
+
+@article{qin2022enhanced,
+  title={Enhanced Situational Awareness for DER-Rich Distribution Systems Under Pre-and Post-Outage},
+  author={Qin, Chuan and Bajagain, Surendra and Pannala, Sanjeev and Srivastava, Anurag K and Dubey, Anamika},
+  journal={IEEE Transactions on Power Delivery},
+  volume={38},
+  number={1},
+  pages={677--691},
+  year={2022},
+  publisher={IEEE}
+}
+
+@article{jha2022distribution,
+  title={Distribution grid optimal power flow (d-opf): Modeling, analysis, and benchmarking},
+  author={Jha, Rahul R and Inaolaji, Adedoyin and Biswas, Biswajit Dipan and Suresh, Arun and Dubey, Anamika and Paudyal, Sumit and Kamalasadan, Sukumar},
+  journal={IEEE Transactions on Power Systems},
+  year={2022},
+  publisher={IEEE}
+}
+
+@inproceedings{krishnamoorthy2022open,
+  title={An Open-source Environment for Reinforcement Learning in Power Distribution Systems},
+  author={Krishnamoorthy, Gayathri and Dubey, Anamika and Gebremedhin, Assefaw H},
+  booktitle={2022 IEEE Power \& Energy Society General Meeting (PESGM)},
+  pages={1--5},
+  year={2022},
+  organization={IEEE}
+}
+
+@inproceedings{anderson2022real,
+  title={Real-time distribution simulation and application development for power systems education},
+  author={Anderson, Alexander and Barr, Jonathan and Vadari, Subramanian and Dubey, Anamika},
+  booktitle={2022 IEEE Power \& Energy Society General Meeting (PESGM)},
+  pages={01--05},
+  year={2022},
+  organization={IEEE}
+}
+
+@inproceedings{bajagain2022spectral,
+  title={Spectral Clustering for Fast Outage Detection and Visualization in Power Distribution Systems},
+  author={Bajagain, Surendra and Dubey, Anamika},
+  booktitle={2022 IEEE Power \& Energy Society General Meeting (PESGM)},
+  pages={01--05},
+  year={2022},
+  organization={IEEE}
+}
+
+@article{luo2022convergence,
+  title={Convergence Guarantees of a Distributed Network Equivalence Algorithm for Distribution-OPF},
+  author={Luo, Yunqi and Sadnan, Rabayet and Krishnamoorthy, Bala and Dubey, Anamika},
+  journal={arXiv preprint arXiv:2210.17465},
+  year={2022}
+}
+
+@article{sadnan2022distributed,
+  title={Distributed Computing for Scalable Optimal Power Flow in Large Radial Electric Power Distribution Systems with Distributed Energy Resources},
+  author={Sadnan, Rabayet and Dubey, Anamika},
+  journal={arXiv preprint arXiv:2211.03920},
+  year={2022}
+}
+
+@article{poudyal2022risk,
+  title={Risk-based active distribution system planning for resilience against extreme weather events},
+  author={Poudyal, Abodh and Poudel, Shiva and Dubey, Anamika},
+  journal={IEEE Transactions on Sustainable Energy},
+  volume={14},
+  number={2},
+  pages={1178--1192},
+  year={2022},
+  publisher={IEEE}
+}
+
+@article{bajagain2022iterative,
+  title={Iterative Distribution System State Estimation for Integrated Primary and Split-phase Secondary Feeder Monitoring},
+  author={Bajagain, Surendra and Dubey, Anamika},
+  journal={IEEE Transactions on Power Delivery},
+  year={2022},
+  publisher={IEEE}
+}
+
+@inproceedings{bajagain2022integrating,
+  title={Integrating Advanced Applications in Industrial ADMS for Estimating PV Resources and Topology},
+  author={Bajagain, Surendra and Qin, Chuan and Pannala, Sanjeev and Srivastava, Anurag and Dubey, Anamika},
+  booktitle={2022 IEEE Industry Applications Society Annual Meeting (IAS)},
+  pages={1--6},
+  year={2022},
+  organization={IEEE}
+}
+
+@article{poudyal2022sensitivity,
+  title={Sensitivity Analyses of Resilience-oriented Risk-averse Active Distribution Systems Planning},
+  author={Poudyal, Abodh and Dubey, Anamika},
+  journal={arXiv preprint arXiv:2211.13879},
+  year={2022}
+}
+
+@article{sadnan2022simulation,
+  title={Simulation-Integrated Distributed Optimal Power Flow for Unbalanced Power Distribution Systems},
+  author={Sadnan, Rabayet and Gray, Nathan and Bose, Anjan and Dubey, Anamika},
+  journal={arXiv preprint arXiv:2212.04615},
+  year={2022}
+}
+
+@article{poudyal2022spatiotemporal,
+  title={Spatiotemporal Impact Analysis of Hurricanes and Storm Surges on Power Systems},
+  author={Poudyal, Abodh and Wertz, Charlotte and Nguyen, Amy Mi and Mahmud, Sajjad Uddin and Gunturi, Vibha and Dubey, Anamika},
+  journal={arXiv preprint arXiv:2212.06047},
+  year={2022}
+}
