--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1243,3 +1243,59 @@
   journal={arXiv preprint arXiv:2212.06047},
   year={2022}
 }
+
+@article{qin2023integrated,
+  title={An Integrated Situational Awareness Tool for Resilience-Driven Restoration With Sustainable Energy Resources},
+  author={Qin, Chuan and Jia, Linli and Bajagain, Surendra and Pannala, Sanjeev and Srivastava, Anurag K and Dubey, Anamika},
+  journal={IEEE Transactions on Sustainable Energy},
+  volume={14},
+  number={2},
+  pages={1099--1111},
+  year={2023},
+  publisher={IEEE}
+}
+
+@techreport{anderson2022introducing,
+  title={Introducing the 9500 node distribution test system to support advanced power applications},
+  author={Anderson, Alexander A and Vadari, Subramanian V and Barr, Jonathan L and Poudel, Shiva and Dubey, Anamika and McDermott, Thomas E and Podmore, Robin},
+  year={2022},
+  institution={Pacific Northwest National Lab.(PNNL), Richland, WA (United States)}
+}
+
+@article{macmillan2023shedding,
+  title={Shedding light on the economic costs of long-duration power outages: A review of resilience assessment methods and strategies},
+  author={Macmillan, Madeline and Wilson, Kyle and Baik, Sunhee and Carvallo, Juan Pablo and Dubey, Anamika and Holland, Christine A},
+  journal={Energy Research \& Social Science},
+  volume={99},
+  pages={103055},
+  year={2023},
+  publisher={Elsevier}
+}
+
+@article{konar2023distributed,
+  title={Distributed Optimization for Autonomous Restoration in DER-rich Distribution System},
+  author={Konar, Srayashi and Srivastava, Anurag K and Dubey, Anamika},
+  journal={IEEE Transactions on Power Delivery},
+  year={2023},
+  publisher={IEEE}
+}
+
+@article{reiman2023app,
+  title={App Deconfliction: Orchestrating Distributed, Multi-Agent, Multi-Objective Operations for Power Systems},
+  author={Reiman, Andrew P and Poudel, Shiva and Mukherjee, Monish and Anderson, Alexander A and Vasios, Orestis and Slay, Tylor E and Black, Gary D and Dubey, Anamika and Ogle, James P},
+  journal={IEEE Access},
+  year={2023},
+  publisher={IEEE}
+}
+
+@article{dubey2023distribution,
+  title={Distribution System Optimization to Manage Distributed Energy Resources (DERs) for Grid Services},
+  author={Dubey, Anamika and Paudyal, Sumit and others},
+  journal={Foundations and Trends{\textregistered} in Electric Energy Systems},
+  volume={6},
+  number={3-4},
+  pages={120--264},
+  year={2023},
+  publisher={Now Publishers, Inc.}
+}
+
