--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1299,3 +1299,98 @@
   publisher={Now Publishers, Inc.}
 }
 
+@incollection{dubey2023preparing,
+  title={Preparing the Power Grid for Extreme Weather Events: Resilience Modeling and Optimization},
+  author={Dubey, Anamika},
+  booktitle={Women in Power: Research and Development Advances in Electric Power Systems},
+  pages={209--243},
+  year={2023},
+  publisher={Springer International Publishing Cham}
+}
+
+@article{manandhardemand,
+  title={Demand Response Supply Estimation with Smart Meter Data},
+  author={Manandhar, Olvar Bergland Anamika Dubey Grishma and Love, Alan}
+}
+
+@article{dubeyengineering,
+  title={Engineering Rhizosphere microbiome of soybean for improving plant performance and disease resistance},
+  author={Dubey, Anamika},
+  publisher={Sagar}
+}
+
+@inproceedings{bajagain2023analysis,
+  title={Analysis of Smart Meter Data and Impacts on Large-scale Power Distribution Networks},
+  author={Bajagain, Surendra and Dubey, Anamika},
+  booktitle={2023 IEEE Belgrade PowerTech},
+  pages={01--06},
+  year={2023},
+  organization={IEEE}
+}
+
+@article{ostadijafari2023principal,
+  title={Principal-Agent Model for Bilateral Contract Design to Incentivize Residential Demand-side Flexibility},
+  author={Ostadijafari, Mohammad and Manandhar, Grishma and Dubey, Anamika and Love, H Alan and Bergland, Olvar},
+  journal={IEEE Transactions on Energy Markets, Policy and Regulation},
+  year={2023},
+  publisher={IEEE}
+}
+
+@article{paul2023resilience,
+  title={Resilience assessment and planning in power distribution systems: Past and future considerations},
+  author={Paul, Shuva and Poudyal, Abodh and Poudel, Shiva and Dubey, Anamika and Wang, Zhaoyu},
+  journal={arXiv preprint arXiv:2308.07552},
+  year={2023}
+}
+
+@techreport{schneider2023citadels,
+  title={Citadels Final Report (GMLC 2.2. 1: Citadels)},
+  author={Schneider, Kevin P and Glass, Jim and Klauber, Cecilia and Ollis, Ben and Reno, Matthew and Dubey, Anamika and Burck, Michael and Xie, Jing and Wall, Lorin T and Marinovici, Laurentiu D and others},
+  year={2023},
+  institution={Pacific Northwest National Laboratory (PNNL), Richland, WA (United States)}
+}
+
+@inproceedings{bajagain2023effects,
+  title={Effects of Approximate Residential Distribution System Models on Power Systems Analysis},
+  author={Bajagain, Surendra and Dubey, Anamika},
+  booktitle={2023 IEEE Power \& Energy Society General Meeting (PESGM)},
+  pages={1--5},
+  year={2023},
+  organization={IEEE}
+}
+
+@inproceedings{jha2023volt,
+  title={Volt/VAR Optimization (VVO) Application on GridAPPS-D Platform},
+  author={Jha, Rahul R and Poudel, Shiva and Sharma, Poorva and Dubey, Anamika and Schneider, Kevin P},
+  booktitle={2023 IEEE Power \& Energy Society General Meeting (PESGM)},
+  pages={1--5},
+  year={2023},
+  organization={IEEE}
+}
+
+@inproceedings{vu2023coordination,
+  title={Coordination of Networked Microgrids for Supporting Voltages of Bulk Power Systems},
+  author={Vu, TL and Marinovici, L and Schneider, K and Xie, J and Klauber, C and Dubey, A},
+  booktitle={2023 IEEE Power \& Energy Society General Meeting (PESGM)},
+  pages={1--5},
+  year={2023},
+  organization={IEEE}
+}
+
+@inproceedings{poudyal2023spatiotemporal,
+  title={Spatiotemporal Impact Assessment of Hurricanes and Storm Surges on Electric Power Systems},
+  author={Poudyal, Abodh and Wertz, Charlotte and Nguyen, Amy Mi and Mahmud, Sajjad Uddin and Dubey, Anamika and Gunturi, Vibha},
+  booktitle={2023 IEEE Power \& Energy Society General Meeting (PESGM)},
+  pages={1--5},
+  year={2023},
+  organization={IEEE}
+}
+
+@article{bajagain2023integrating,
+  title={Integrating Solar Resources and Topology Estimation Modules in Industrial ADMS Environment},
+  author={Bajagain, Surendra and Qin, Chuan and Pannala, Sanjeev and Srivastava, Anurag and Dubey, Anamika},
+  journal={IEEE Transactions on Industry Applications},
+  year={2023},
+  publisher={IEEE}
+}
+
