--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -5,6 +5,8 @@
 
 
 @inproceedings{dubey2012average,
+  bibtex_show={true},
+  abbr={IEEE},
   title={Average-value model for plug-in hybrid electric vehicle battery chargers},
   author={Dubey, Anamika and Santoso, Surya and Cloud, Matthew P},
   booktitle={2012 IEEE Power and Energy Society General Meeting},
