--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -12,7 +12,9 @@
   booktitle={2012 IEEE Power and Energy Society General Meeting},
   pages={1--8},
   year={2012},
-  organization={IEEE}
+  organization={IEEE},
+  html={https://ieeexplore.ieee.org/abstract/document/6345162},
+  pdf={example_pdf.pdf},
 }
 
 @inproceedings{sun2012decoupled,
