--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -18,12 +18,16 @@
 }
 
 @inproceedings{sun2012decoupled,
+   bibtex_show={true},
+  abbr={IEEE},
   title={Decoupled three-phase load flow method for unbalanced distribution systems},
   author={Sun, Hongbo and Dubey, Anamika and Nikovski, Daniel and Ohno, Tetsufumi and Takano, Tomihiro and Kojima, Yasuhiro},
   booktitle={2012 IEEE International Conference on Power System Technology (POWERCON)},
   pages={1--6},
   year={2012},
-  organization={IEEE}
+  organization={IEEE},
+  html={https://ieeexplore.ieee.org/document/6401263},
+  pdf={example_pdf.pdf},
 }
 
 @article{dubey2013average,
