--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -18,7 +18,7 @@
 }
 
 @inproceedings{sun2012decoupled,
-   bibtex_show={true},
+  bibtex_show={true},
   abbr={IEEE},
   title={Decoupled three-phase load flow method for unbalanced distribution systems},
   author={Sun, Hongbo and Dubey, Anamika and Nikovski, Daniel and Ohno, Tetsufumi and Takano, Tomihiro and Kojima, Yasuhiro},
@@ -31,6 +31,8 @@
 }
 
 @article{dubey2013average,
+  bibtex_show={true},
+  abbr={IEEE},
   title={Average-value model of electric vehicle chargers},
   author={Dubey, Anamika and Santoso, Surya and Cloud, Matthew P},
   journal={IEEE Transactions on Smart Grid},
@@ -38,10 +40,16 @@
   number={3},
   pages={1549--1557},
   year={2013},
-  publisher={IEEE}
+  publisher={IEEE},
+  html={https://ieeexplore.ieee.org/document/6401263},
+  pdf={example_pdf.pdf}
 }
 
 @article{dubey2012impact,
+  bibtex_show={true},
+  abbr={IEEE},
+  html={https://ieeexplore.ieee.org/document/6401263},
+  pdf={example_pdf.pdf},
   title={Impact of electric vehicle loads on utility distribution network voltages},
   author={Dubey, Anamika},
   year={2012}
