--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -41,14 +41,14 @@
   pages={1549--1557},
   year={2013},
   publisher={IEEE},
-  html={https://ieeexplore.ieee.org/document/6401263},
+  html={https://ieeexplore.ieee.org/document/6584033},
   pdf={example_pdf.pdf}
 }
 
 @article{dubey2012impact,
   bibtex_show={true},
-  abbr={IEEE},
-  html={https://ieeexplore.ieee.org/document/6401263},
+  abbr={Report},
+  html={https://repositories.lib.utexas.edu/handle/2152/22510},
   pdf={example_pdf.pdf},
   title={Impact of electric vehicle loads on utility distribution network voltages},
   author={Dubey, Anamika},
@@ -58,7 +58,7 @@
 @inproceedings{dubey2013understanding,
   bibtex_show={true},
   abbr={IEEE},
-  html={https://ieeexplore.ieee.org/document/6401263},
+  html={https://ieeexplore.ieee.org/abstract/document/6672557},
   pdf={example_pdf.pdf},
   title={Understanding the effects of electric vehicle charging on the distribution voltages},
   author={Dubey, Anamika and Santoso, Surya and Cloud, Matthew P},
@@ -71,7 +71,7 @@
 @inproceedings{dubey2013practical,
   bibtex_show={true},
   abbr={IEEE},
-  html={https://ieeexplore.ieee.org/document/6401263},
+  html={https://ieeexplore.ieee.org/abstract/document/6799791},
   pdf={example_pdf.pdf},
   title={A practical approach to evaluate voltage quality effects of electric vehicle charging},
   author={Dubey, Anamika and Santoso, Surya and Cloud, Matthew P},
@@ -84,7 +84,7 @@
 @inproceedings{dubey2014comparative,
   bibtex_show={true},
   abbr={IEEE},
-  html={https://ieeexplore.ieee.org/document/6401263},
+  html={https://ieeexplore.ieee.org/abstract/document/6863339},
   pdf={example_pdf.pdf},
   title={Comparative analysis of effects of electric vehicle loads on distribution system voltages},
   author={Dubey, A and Santoso, S and Cloud, MP},
@@ -97,7 +97,7 @@
 @article{stevens2014improving,
   bibtex_show={true},
   abbr={IEEE},
-  html={https://ieeexplore.ieee.org/document/6401263},
+  html={https://ieeexplore.ieee.org/document/6899713},
   pdf={example_pdf.pdf},
   title={On improving reliability of shipboard power system},
   author={Stevens, Ben and Dubey, Anamika and Santoso, Surya},
@@ -112,7 +112,7 @@
 @inproceedings{dubey2014locating,
   bibtex_show={true},
   abbr={IEEE},
-  html={https://ieeexplore.ieee.org/document/6401263},
+  html={https://ieeexplore.ieee.org/document/6993981},
   pdf={example_pdf.pdf},
   title={Locating of multi-phase faults of ungrounded distribution system},
   author={Dubey, Anamika and Sun, Hongbo and Nikovski, Daniel and Zhang, Jinyun and Takano, Tomihiro and Kojima, Yasuhiro and Ohno, Tetsufumi},
@@ -124,8 +124,8 @@
 
 @techreport{bohn2015comparative,
   bibtex_show={true},
-  abbr={IEEE},
-  html={https://ieeexplore.ieee.org/document/6401263},
+  abbr={SAE},
+  html={https://www.sae.org/publications/technical-papers/content/2015-01-0300/},
   pdf={example_pdf.pdf},
   title={A comparative analysis of pev charging impacts-an international perspective},
   author={Bohn, Sven and Agsten, Michael and Dubey, Anamika and Santoso, Surya},
@@ -134,6 +134,9 @@
 }
 
 @misc{sun2017decoupled,
+  bibtex_show={true},
+  abbr={US Patent},
+  html={https://patents.google.com/patent/US9640994B2/en},
   title={Decoupled three-phase power flow analysis method for unbalanced power distribution systems},
   author={Sun, Hongbo and Dubey, Anamika},
   year={2017},
@@ -144,7 +147,7 @@
 @inproceedings{dubey2015locating,
   bibtex_show={true},
   abbr={IEEE},
-  html={https://ieeexplore.ieee.org/document/6401263},
+  html={https://ieeexplore.ieee.org/document/7131882},
   pdf={example_pdf.pdf},
   title={Locating double-line-to-ground faults using hybrid current profile approach},
   author={Dubey, Anamika and Sun, Hongbo and Nikovski, Daniel and Takano, Tomihiro and Kojima, Yasuhiro and Ohno, Tetsufumi},
@@ -157,7 +160,7 @@
 @article{dubey2015determining,
   bibtex_show={true},
   abbr={IEEE},
-  html={https://ieeexplore.ieee.org/document/6401263},
+  html={https://ieeexplore.ieee.org/document/7070659},
   pdf={example_pdf.pdf},
   title={Determining time-of-use schedules for electric vehicle loads: A practical perspective},
   author={Dubey, Anamika and Santoso, Surya and Cloud, Matthew P and Waclawiak, Marek},
@@ -171,8 +174,8 @@
 
 @misc{sun2016locating,
   bibtex_show={true},
-  abbr={IEEE},
-  html={https://ieeexplore.ieee.org/document/6401263},
+  abbr={US Patent},
+  html={https://patents.google.com/patent/US9476930B2/en},
   pdf={example_pdf.pdf},
   title={Locating multi-phase faults in ungrounded power distribution systems},
   author={Sun, Hongbo and Dubey, Anamika},
@@ -184,7 +187,7 @@
 @inproceedings{dubey2015reliability,
   bibtex_show={true},
   abbr={IEEE},
-  html={https://ieeexplore.ieee.org/document/6401263},
+  html={https://ieeexplore.ieee.org/document/7157867},
   pdf={example_pdf.pdf},
   title={Reliability analysis of three-dimensional shipboard electrical power distribution systems},
   author={Dubey, Anamika and Santoso, Surya and Arapostathis, Aristotle},
@@ -195,6 +198,8 @@
 }
 
 @article{santoso2015power,
+  bibtex_show={true},
+  abbr={Book Chapter},
   title={Power System Harmonics},
   author={Santoso, Surya and Dubey, Anamika},
   journal={Electric Power Engineering Research and Education: A festschrift for Gerald T. Heydt},
