--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -199,7 +199,7 @@
 
 @article{santoso2015power,
   bibtex_show={true},
-  abbr={Book Chapter},
+  abbr={Springer},
   title={Power System Harmonics},
   author={Santoso, Surya and Dubey, Anamika},
   journal={Electric Power Engineering Research and Education: A festschrift for Gerald T. Heydt},
@@ -211,7 +211,7 @@
 @inproceedings{dubey2015understanding,
   bibtex_show={true},
   abbr={IEEE},
-  html={https://ieeexplore.ieee.org/document/6401263},
+  html={https://ieeexplore.ieee.org/document/7286510},
   pdf={example_pdf.pdf},
   title={Understanding photovoltaic hosting capacity of distribution circuits},
   author={Dubey, Anamika and Santoso, Surya and Maitra, Arindam},
@@ -224,7 +224,7 @@
 @article{dubey2015availability,
   bibtex_show={true},
   abbr={IEEE},
-  html={https://ieeexplore.ieee.org/document/6401263},
+  html={https://ieeexplore.ieee.org/abstract/document/7322283},
   pdf={example_pdf.pdf},
   title={Availability-based distribution circuit design for shipboard power system},
   author={Dubey, Anamika and Santoso, Surya},
@@ -239,7 +239,7 @@
 @article{dubey2015electric,
   bibtex_show={true},
   abbr={IEEE},
-  html={https://ieeexplore.ieee.org/document/6401263},
+  html={https://ieeexplore.ieee.org/document/7264982},
   pdf={example_pdf.pdf},
   title={Electric vehicle charging on residential distribution systems: Impacts and mitigations},
   author={Dubey, Anamika and Santoso, Surya},
@@ -251,6 +251,8 @@
 }
 
 @incollection{santoso2015power,
+  bibtex_show={true},
+  abbr={McGraw-Hill},
   title={Power Quality},
   author={Santoso, Surya and Dubey, Anamika},
   booktitle={Handbook of Electric Power Calculations, 4th edition},
@@ -259,25 +261,10 @@
   publisher={McGraw-Hill}
 }
 
-@article{dubey2016two,
-  bibtex_show={true},
-  abbr={IEEE},
-  html={https://ieeexplore.ieee.org/document/6401263},
-  pdf={example_pdf.pdf},
-  title={A two-level topology design framework for reliable shipboard power systems},
-  author={Dubey, Anamika and Santoso, Surya},
-  journal={Inventions},
-  volume={1},
-  number={3},
-  pages={14},
-  year={2016},
-  publisher={MDPI}
-}
-
 @inproceedings{dubey2016designing,
   bibtex_show={true},
   abbr={IEEE},
-  html={https://ieeexplore.ieee.org/document/6401263},
+  html={https://ieeexplore.ieee.org/abstract/document/7741923},
   pdf={example_pdf.pdf},
   title={Designing electric distribution circuits for improved system reliability},
   author={Dubey, Anamika and Santoso, Surya},
@@ -325,7 +312,7 @@
 @article{dubey2016estimation,
   bibtex_show={true},
   abbr={IEEE},
-  html={https://ieeexplore.ieee.org/document/6401263},
+  html={https://ieeexplore.ieee.org/document/7723860},
   pdf={example_pdf.pdf},
   title={On estimation and sensitivity analysis of distribution circuit's photovoltaic hosting capacity},
   author={Dubey, Anamika and Santoso, Surya},
@@ -340,7 +327,7 @@
 @inproceedings{jothibasu2016determining,
   bibtex_show={true},
   abbr={IEEE},
-  html={https://ieeexplore.ieee.org/document/6401263},
+  html={https://ieeexplore.ieee.org/abstract/document/7747939},
   pdf={example_pdf.pdf},
   title={Determining PV hosting capacity without incurring grid integration cost},
   author={Jothibasu, Suma and Santoso, Surya and Dubey, Anamika},
@@ -353,7 +340,7 @@
 @inproceedings{dubey2016analytical,
   bibtex_show={true},
   abbr={IEEE},
-  html={https://ieeexplore.ieee.org/document/6401263},
+  html={https://ieeexplore.ieee.org/document/7781256},
   pdf={example_pdf.pdf},
   title={Analytical approach to estimate distribution circuit's energy storage accommodation capacity},
   author={Dubey, Anamika and Padullaparti, Harsha V and Santoso, Surya},
@@ -363,45 +350,10 @@
   organization={IEEE}
 }
 
-@article{dubey2017framework,
-  title={A framework for stacked-benefit analysis of distribution-level energy storage deployment},
-  author={Dubey, Anamika and Chirapongsananurak, Pisitpol and Santoso, Surya},
-  journal={Inventions},
-  volume={2},
-  number={2},
-  pages={6},
-  year={2017},
-  publisher={MDPI}
-}
-
-@article{dubey2017impacts,
-  title={Impacts of voltage control methods on distribution circuit’s photovoltaic (PV) integration limits},
-  author={Dubey, Anamika},
-  journal={Inventions},
-  volume={2},
-  number={4},
-  pages={28},
-  year={2017},
-  publisher={MDPI}
-}
-
-@inproceedings{dubey2017testing,
-  bibtex_show={true},
-  abbr={IEEE},
-  html={https://ieeexplore.ieee.org/document/6401263},
-  pdf={example_pdf.pdf},
-  title={Testing and validation of a dynamic estimator of states in OPAL-RT real time simulator},
-  author={Dubey, Anamika and Chakrabarti, Saikat and Terzija, Vladimir},
-  booktitle={2017 IEEE Power \& Energy Society General Meeting},
-  pages={1--5},
-  year={2017},
-  organization={IEEE}
-}
-
 @inproceedings{dubey2017robust,
   bibtex_show={true},
   abbr={IEEE},
-  html={https://ieeexplore.ieee.org/document/6401263},
+  html={https://ieeexplore.ieee.org/document/8274597},
   pdf={example_pdf.pdf},
   title={A robust approach to restoring critical loads in a resilient power distribution system},
   author={Dubey, Anamika and Poudel, Shiva},
@@ -414,7 +366,7 @@
 @inproceedings{chirapongsananurak2017stacked,
   bibtex_show={true},
   abbr={IEEE},
-  html={https://ieeexplore.ieee.org/document/6401263},
+  html={https://ieeexplore.ieee.org/abstract/document/8273937},
   pdf={example_pdf.pdf},
   title={Stacked benefit applications of energy storage systems in distribution circuits},
   author={Chirapongsananurak, Pisitpol and Dubey, Anamika and Jothibasu, Suma and Santoso, Surya and Maitra, Arindam},
@@ -425,10 +377,14 @@
 }
 
 @phdthesis{dubey2015distributed,
-  title={Distributed resource integration analysis and network design of electric power distribution systems},
-  author={Dubey, Anamika},
-  year={2015}
-}
+    bibtex_show={true},
+    abbr={Thesis},
+    html={https://repositories.lib.utexas.edu/handle/2152/63896},
+    pdf={example_pdf.pdf},
+    title={Distributed resource integration analysis and network design of electric power distribution systems},
+    author={Dubey, Anamika},
+    year={2015}
+  }
 
 @article{poudel2018critical,
   bibtex_show={true},
