--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1559,7 +1559,7 @@
   bibtex_show={true},
   abbr={Monograph},
   html={https://ieeexplore.ieee.org/document/10158441},
-  pdf={monograph.pdf},
+  pdf={Monograph Distribution System Optimization DubeyPaudyal.pdf},
   title={Distribution System Optimization to Manage Distributed Energy Resources (DERs) for Grid Services},
   author={Dubey, Anamika and Paudyal, Sumit and others},
   journal={Foundations and Trends{\textregistered} in Electric Energy Systems},
