--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1573,6 +1573,7 @@
 @incollection{dubey2023preparing,
   bibtex_show={true},
   abbr={Springer},
+  selected= {true},
   html={https://link.springer.com/chapter/10.1007/978-3-031-29724-3_8},
   title={Preparing the Power Grid for Extreme Weather Events: Resilience Modeling and Optimization},
   author={Dubey, Anamika},
