--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -239,6 +239,7 @@
 @article{dubey2015electric,
   bibtex_show={true},
   abbr={IEEE},
+  selected={true},
   html={https://ieeexplore.ieee.org/document/7264982},
   pdf={example_pdf.pdf},
   title={Electric vehicle charging on residential distribution systems: Impacts and mitigations},
@@ -312,6 +313,7 @@
 @article{dubey2016estimation,
   bibtex_show={true},
   abbr={IEEE},
+  selected={true},
   html={https://ieeexplore.ieee.org/document/7723860},
   pdf={example_pdf.pdf},
   title={On estimation and sensitivity analysis of distribution circuit's photovoltaic hosting capacity},
@@ -1045,6 +1047,7 @@
 @article{jha2021network,
   bibtex_show={true},
   abbr={IEEE},
+  selected={true},
   html={https://ieeexplore.ieee.org/document/9380497},
   pdf={example_pdf.pdf},
   title={Network-level optimization for unbalanced power distribution system: Approximation and relaxation},
@@ -1075,6 +1078,7 @@
 @inproceedings{sadnan2021distributed,
   bibtex_show={true},
   abbr={IEEE},
+  selected={true}
   html={https://ieeexplore.ieee.org/document/9449776},
   pdf={example_pdf.pdf},
   title={Distributed Voltage Control for Network-level Optimization in Radial Power Distribution Systems},
@@ -1344,6 +1348,7 @@
 @inproceedings{poudyal2022risk,
   bibtex_show={true},
   abbr={IEEE},
+  selected={true},
   html={https://ieeexplore.ieee.org/document/9810633},
   pdf={example_pdf.pdf},
   title={A risk-driven probabilistic approach to quantify resilience in power distribution systems},
@@ -1372,6 +1377,7 @@
 @article{sadnan2022layered,
   bibtex_show={true},
   abbr={IEEE},
+  selected={true}
   html={https://ieeexplore.ieee.org/document/9780574},
   pdf={example_pdf.pdf},
   title={Layered coordination architecture for resilient restoration of power distribution systems},
@@ -1415,6 +1421,7 @@
 @article{jha2022distribution,
   bibtex_show={true},
   abbr={IEEE},
+  selected={true},
   html={https://ieeexplore.ieee.org/document/9875966},
   pdf={example_pdf.pdf},
   title={Distribution grid optimal power flow (d-opf): Modeling, analysis, and benchmarking},
@@ -1558,6 +1565,7 @@
 @article{dubey2023distribution,
   bibtex_show={true},
   abbr={Monograph},
+  selected={true},
   html={https://ieeexplore.ieee.org/document/10158441},
   pdf={Monograph Distribution System Optimization DubeyPaudyal.pdf},
   title={Distribution System Optimization to Manage Distributed Energy Resources (DERs) for Grid Services},
