--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1377,7 +1377,7 @@
 @article{sadnan2022layered,
   bibtex_show={true},
   abbr={IEEE},
-  selected={true}
+  selected={true},
   html={https://ieeexplore.ieee.org/document/9780574},
   pdf={example_pdf.pdf},
   title={Layered coordination architecture for resilient restoration of power distribution systems},
