--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -993,6 +993,7 @@
 @article{sadnan2021distributed,
   bibtex_show={true},
   abbr={IEEE},
+  selected={true},
   html={https://ieeexplore.ieee.org/document/9314215},
   pdf={example_pdf.pdf},
   title={Distributed optimization using reduced network equivalents for radial power distribution systems},
@@ -1078,7 +1079,6 @@
 @inproceedings{sadnan2021distributed,
   bibtex_show={true},
   abbr={IEEE},
-  selected={true}
   html={https://ieeexplore.ieee.org/document/9449776},
   pdf={example_pdf.pdf},
   title={Distributed Voltage Control for Network-level Optimization in Radial Power Distribution Systems},
