--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1567,7 +1567,7 @@
   pdf={Monograph Distribution System Optimization DubeyPaudyal.pdf},
   title={Distribution System Optimization to Manage Distributed Energy Resources (DERs) for Grid Services},
   author={Dubey, Anamika and Paudyal, Sumit and others},
-  journal={Foundations and Trends{\textregistered} in Electric Energy Systems},
+  journal={Foundations and Trends in Electric Energy Systems},
   volume={6},
   number={3-4},
   pages={120--264},
