added a selected paper from rser

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,20 @@
 
 @string{aps = {American Physical Society,}}
 
+@article{paul2024resilience,
+  bibtex_show={true},
+  abbr={Elsevier},
+  selected={true},
+  html={https://www.sciencedirect.com/science/article/pii/S1364032123008493},
+  pdf={rser.pdf},
+  title={Resilience assessment and planning in power distribution systems: Past and future considerations},
+  author={Paul, Shuva and Poudyal, Abodh and Poudel, Shiva and Dubey, Anamika and Wang, Zhaoyu},
+  journal={Renewable and Sustainable Energy Reviews},
+  volume={189},
+  pages={113991},
+  year={2024},
+  publisher={Elsevier}
+}
 
 @inproceedings{dubey2012average,
   bibtex_show={true},
